{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 19,
  "lineage": "5cee2c22-68a8-2f51-aaeb-0349431b14e8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Network/networkInterfaces/azure-nic",
            "internal_domain_name_suffix": "fixw3hec5zcubof1zuvkp2zzdc.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Network/publicIPAddresses/azure-ip",
                "subnet_id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Network/virtualNetworks/azure-network/subnets/internal"
              }
            ],
            "location": "francecentral",
            "mac_address": "00-0D-3A-89-DB-96",
            "name": "azure-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "azure-resources",
            "virtual_machine_id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Compute/virtualMachines/azure-vm"
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Network/networkSecurityGroups/azure-nsg",
            "location": "francecentral",
            "name": "azure-nsg",
            "resource_group_name": "azure-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "azure-nsg-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "",
                "source_port_ranges": [
                  "443",
                  "80"
                ]
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Network/networkSecurityGroups/azure-nsg/securityRules/azure-nsg-rule",
            "name": "azure-nsg-rule",
            "network_security_group_name": "azure-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "azure-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "",
            "source_port_ranges": [
              "443",
              "80"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Network/publicIPAddresses/azure-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.143.142.241",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "azure-ip",
            "resource_group_name": "azure-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Network/virtualNetworks/azure-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "azure-resources",
            "virtual_network_name": "azure-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9c6e2f2a-fe82-4045-b8bb-cd2aa7f3391a",
            "id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Network/virtualNetworks/azure-network",
            "location": "francecentral",
            "name": "azure-network",
            "resource_group_name": "azure-resources",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/e3c97b28-213c-4306-9b20-df3f29866c58/resourceGroups/azure-resources/providers/Microsoft.Network/virtualNetworks/azure-network/subnets/internal",
                "name": "internal"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}